--- a/web/src/static/translations/fr.json
+++ b/web/src/static/translations/fr.json
@@ -1,3 +1,5 @@
 {
-    "My untranslated string": "Ma phrase traduite"
+    "My untranslated string": "Ma phrase traduite",
+    "Please S20n, could you translate this string?": "S'il te plaît S20n, pourrais-tu traduire cette phrase?",
+    "Click on this button to loop between languages": "Appuyez sur ce bouton pour change de langue"
 }
