--- a/web/src/static/translations/fr.json
+++ b/web/src/static/translations/fr.json
@@ -1,5 +1,6 @@
 {
     "My untranslated string": "Ma phrase traduite",
     "Please S20n, could you translate this string?": "S'il te plaît S20n, pourrais-tu traduire cette phrase?",
-    "Click on this button to loop between languages": "Appuyez sur ce bouton pour change de langue"
+    "Click on this button to loop between languages": "Appuyez sur ce bouton pour changer de langue",
+    "Download language": "Télécharger la langue"
 }
