--- a/static/translations/es.json
+++ b/static/translations/es.json
@@ -1,5 +1,6 @@
 {
     "My untranslated string": "Mi frase traducida",
     "Please S20n, could you translate this string?": "Porfavor S20n, podrias traducir este frase?",
-    "Click on this button to loop between languages": "Empuje este button para cambiar language"
+    "Click on this button to loop between languages": "Empuje este button para cambiar language",
+    "Download language": "Descargar la lingua"
 }
